src/ui/snapshots/state/default/data_loading/error_api_at_step3.snap
---
source: src/ui/state/default/data_loading.rs
assertion_line: 2148
expression: harness.backend()
---
"                                                                                                                        "
"                                                                                                                        "
"  ┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │                                               Loading Data - Error                                               │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"  ┌Steps─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │                     1 ✓ Fetch PRs  →  2 ✓ Work Items  →  3 ● Commit Info  →  4 ○ Dependencies                    │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"  ┌Error─────────────────────────────────────────────────────────────────────────────────────────────────────────────┐  "
"  │API request failed: HTTP 503 Service Unavailable                                                                  │  "
"  │                                                                                                                  │  "
"  │Options:                                                                                                          │  "
"  │• Press 'r' to retry                                                                                              │  "
"  │• Press 'Esc' to go back                                                                                          │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  │                                                                                                                  │  "
"  └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘  "
"                                                                                                                        "
"                                                                                                                        "
