src/ui/snapshots/state/default/data_loading/fetching_commit_info.snap
---
source: src/ui/state/default/data_loading.rs
expression: harness.backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                               Merge Mode - Loading Data                                              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Progress──────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│█████████████████████████████████████████████████████████73% █████████████████████████                                │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Status────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                           Fetching commit information (2/3)                                          │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Help──────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                             Loading... Press q to cancel                                             │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
